<?xml version="1.0"?>
<package format="2">
  <name>pose_graph_slam</name>
  <version>1.0.0</version>
  <description>The pose_graph_slam package</description>

  <maintainer email="rajprakashshinde07@gmail.com">Raj Shinde</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
